--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         </div>
         <!-- Greeting Element -->
         <div class="quote-greeting">
-            <span id="greeting">A very Happy Eid-Mubarak to you </span><span id="user-name"></span>
+            <span id="user-name"></span> wishes you
         </div><br>
 
-        <h4 style="text-align: left; font-size: large;">Enter your name and share with Family and Friends</h4>
+        <div class="quote-text">
+            <span> A very Happy Eid-Mubarak to you! </span>
+        </div>
 
+        <h4 style="text-align: left; font-size: large;">Enter your name and share with Family and Friends</h4>
         <input type="text" id="name-input" placeholder="Enter your name" />
 
         <div class="button-container">
