--- a/index.html
+++ b/index.html
@@ -5,7 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eid Mubarak</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add your existing styles here */
+
+        button {
+            font-size: 20px;
+            padding: 10px;
+            margin: 10px;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        input[type="text"] {
+            padding: 10px;
+            margin: 10px 0;
+            font-size: 18px;
+            width: 100%;
+            max-width: 300px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        .quote-container {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .quote-text {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .quote-greeting {
+            font-size: 22px;
+            font-weight: bold;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center;
+        }
+
+        .copy-link-button {
+            background-color: #555;
+        }
+
+        button i {
+            font-size: 25px;
+        }
+
+        h4 {
+            font-size: 18px;
+        }
+
+        #share-link-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        #share-link {
+            padding: 10px;
+            font-size: 18px;
+            width: 100%;
+            max-width: 300px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+    </style>
 </head>
 <body>
     <div class="quote-container" id="quote-container">
@@ -38,6 +107,57 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Get elements
+        const nameInput = document.getElementById('name-input');
+        const greetingElement = document.getElementById('user-name');
+        const copyLinkButton = document.getElementById('copy-link');
+        const shareLinkInput = document.getElementById('share-link');
+
+        // Function to update greeting with name from URL if available
+        function updateGreetingFromURL() {
+            // Get the URL parameters
+            const urlParams = new URLSearchParams(window.location.search);
+            const name = urlParams.get('name');  // Get the 'name' query parameter
+            
+            if (name) {
+                // If name is found in URL, display it
+                greetingElement.textContent = name + " wishes you";
+            } else {
+                // If no name, display empty or default message
+                greetingElement.textContent = '';
+            }
+        }
+
+        // Event listener for input change (updates greeting based on input)
+        nameInput.addEventListener('input', () => {
+            const name = nameInput.value.trim();
+            if (name) {
+                greetingElement.textContent = name + " wishes you";
+            } else {
+                greetingElement.textContent = '';
+            }
+        });
+
+        // Function to generate the shareable link
+        function generateShareLink() {
+            const name = nameInput.value.trim();
+            const baseUrl = window.location.href.split('?')[0]; // Get the base URL without any query parameters
+            const shareUrl = `${baseUrl}?name=${encodeURIComponent(name)}`;
+
+            shareLinkInput.value = shareUrl;
+        }
+
+        // Event listener to copy the link to clipboard
+        copyLinkButton.addEventListener('click', () => {
+            generateShareLink();
+            shareLinkInput.select();
+            document.execCommand('copy');
+            alert('Link copied to clipboard!');
+        });
+
+        // Update greeting when the page is loaded and the URL has the name parameter
+        window.onload = updateGreetingFromURL;
+    </script>
 </body>
 </html>
