--- a/index.html
+++ b/index.html
@@ -7,107 +7,83 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
 
+        body {
+          margin: 0;
+          min-height: 100vh;
+          background-color: #a592ac;
+          background-image: url("https://img.freepik.com/premium-vector/nice-abstract-background-with-purple-eps10-artistic-elegant_705028-64.jpg?w=1060");
+          color: #000;
+          font-family: 'Acme', sans-serif;
+          font-weight: 700;
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
 
-html {
-  box-sizing: border-box;
-}
+        .quote-container {
+          width: auto;
+          max-width: 900px;
+          padding: 20px 30px;
+          border-radius: 10px;
+          background-color: rgba(255, 255, 255, 0.4);
+          box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
+        }
 
-body {
-  margin: 0;
-  min-height: 100vh;
-  background-color: #a592ac;
-  background-image: url("https://img.freepik.com/premium-vector/nice-abstract-background-with-purple-eps10-artistic-elegant_705028-64.jpg?w=1060");
-  color: #000;
-  font-family:'Acme', sans-serif;
-  font-weight: 700;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+        .quote-text {
+          font-size: 2.2rem;
+        }
 
-.quote-container {
-  width: auto;
-  max-width: 900px;
-  padding: 20px 30px;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.4);
-  box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
-}
+        .long-quote {
+          font-size: 2rem;
+          font-family: 'Caveat Brush', cursive;
+        }
 
+        .fa-quote-left {
+          font-size: 4rem;
+        }
 
-.quote-text {
-  font-size: 2.2rem;
-}
+        .quote-greeting {
+          font-family: 'Trade Winds', cursive;
+          margin-top: 15px;
+          font-size: 1.6rem;
+          font-weight: 400;
+        }
 
-.long-quote {
-  font-size: 2rem;
-  font-family: 'Caveat Brush', cursive;
-}
+        button {
+          cursor: pointer;
+          font-size: 1.5rem;
+          height: 2.8rem;
+          border: none;
+          border-radius: 30px;
+          color: #fff;
+          background: rgb(15, 15, 15);
+          outline: none;
+          padding: 0.5rem 1.7rem;
+          box-shadow: 0 0.5rem rgba(121, 121, 121, 0.80);
+        }
 
-.fa-quote-left {
-  font-size: 4rem;
-}
+        button:hover {
+          filter:brightness(110%);
+          column-rule: rgb(255, 255, 255);
+        }
 
-.quote-greeting {
-  font-family: 'Trade Winds', cursive;
-  margin-top: 15px;
-  font-size: 1.6rem;
-  font-weight: 400;
-}
+        button:active {
+          transform: translate(0, 0.3rem);
+          box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
+        }
 
-button {
-  cursor: pointer;
-  font-size: 1.5rem;
-
-  height: 2.8rem;
-  border: none;
-  border-radius: 30px;
-  color: #fff;
-  background: rgb(15, 15, 15);
-  outline: none;
-  padding: 0.5rem 1.7rem;
-  box-shadow: 0 0.5rem rgba(121, 121, 121, 0.80);
-}
-button:hover {
-  filter:brightness(110%);
-  column-rule: rgb(255, 255, 255);
-}
-
-button:active {
-  transform: translate(0, 0.3rem);
-  box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
-}
-
-.twitter-button {
-  height: 3rem;
-  width: 6rem;
-}
-.whatsapp-button {
-  height: 3rem;
-  width: 6rem;
-}
-.fa-twitter {
-  font-size: 1.5rem;
-  color: #38a1f3;
-}
-.fa-whatsapp {
-  font-size: 1.5rem;
-  color: #25D366;
-}
-
-
-@media screen and (max-width: 1000px) {
-  .quote-container {
-    margin: auto 10px;
-  }
-  .quote-text {
-    font-size: 1.5rem;
-  }
-}
+        @media screen and (max-width: 1000px) {
+          .quote-container {
+            margin: auto 10px;
+          }
+          .quote-text {
+            font-size: 1.5rem;
+          }
+        }
     </style>
 </head>
 <body>
@@ -130,14 +106,9 @@ button:active {
         <input type="text" id="name-input" placeholder="Enter your name" />
 
         <div class="button-container">
-            <button class="copy-link-button" id="copy-link" title="Copy Shareable Link">
-                <i class="fas fa-link"></i> Copy Link
+            <button class="whatsapp-button" id="whatsapp-button" title="Share on WhatsApp">
+                <i class="fab fa-whatsapp"></i> Share to WhatsApp
             </button>
-        </div>
-
-        <div id="share-link-container" style="margin-top: 20px;">
-            <label for="share-link">Your Shareable Link:</label>
-            <input type="text" id="share-link" readonly />
         </div>
     </div>
 
@@ -145,20 +116,16 @@ button:active {
         // Get elements
         const nameInput = document.getElementById('name-input');
         const greetingElement = document.getElementById('user-name');
-        const copyLinkButton = document.getElementById('copy-link');
-        const shareLinkInput = document.getElementById('share-link');
+        const whatsappButton = document.getElementById('whatsapp-button');
 
         // Function to update greeting with name from URL if available
         function updateGreetingFromURL() {
-            // Get the URL parameters
             const urlParams = new URLSearchParams(window.location.search);
-            const name = urlParams.get('name');  // Get the 'name' query parameter
+            const name = urlParams.get('name');
             
             if (name) {
-                // If name is found in URL, display it
-                greetingElement.textContent = name + " wishes you";
+                greetingElement.innerHTML = "<strong>" + name + "</strong> wishes you";
             } else {
-                // If no name, display empty or default message
                 greetingElement.textContent = '';
             }
         }
@@ -167,27 +134,26 @@ button:active {
         nameInput.addEventListener('input', () => {
             const name = nameInput.value.trim();
             if (name) {
-                greetingElement.textContent = name + " wishes you";
+                greetingElement.innerHTML = "<strong>" + name + "</strong>";
             } else {
                 greetingElement.textContent = '';
             }
         });
 
-        // Function to generate the shareable link
-        function generateShareLink() {
+        // Function to generate the custom message
+        function generateShareMessage() {
             const name = nameInput.value.trim();
-            const baseUrl = window.location.href.split('?')[0]; // Get the base URL without any query parameters
+            const baseUrl = window.location.href.split('?')[0];
             const shareUrl = `${baseUrl}?name=${encodeURIComponent(name)}`;
-
-            shareLinkInput.value = shareUrl;
+            const shareMessage = `${name ? `${name}` : 'Someone'} wishes you Happy Eid, click below blue link to view: ${shareUrl}`;
+            return shareMessage;
         }
 
-        // Event listener to copy the link to clipboard
-        copyLinkButton.addEventListener('click', () => {
-            generateShareLink();
-            shareLinkInput.select();
-            document.execCommand('copy');
-            alert('Link copied to clipboard!');
+        // Event listener to share the link to WhatsApp
+        whatsappButton.addEventListener('click', () => {
+            const shareMessage = generateShareMessage();
+            const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(shareMessage)}`;
+            window.open(whatsappUrl, '_blank');
         });
 
         // Update greeting when the page is loaded and the URL has the name parameter
