--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             const name = urlParams.get('name');
             
             if (name) {
-                greetingElement.innerHTML = "<strong>" + name.toUpperCase() + "</strong> wishes you";
+                greetingElement.innerHTML = "<strong>" + name.toUpperCase() + "</strong>";
             } else {
                 greetingElement.textContent = '';
             }
