--- a/index.html
+++ b/index.html
@@ -144,25 +144,25 @@
 </head>
 <body>
     <div class="quote-container" id="quote-container">
-                <!-- Greeting Element -->
+        <!-- Greeting Element -->
         <div class="quote-greeting">
-<div class="user-name" id="user-name"></div>
-        <div class="quote-greeting">wishes you</div>
-    
-        <div class="quote-text">
-            <span> A very Happy Ramadan Mubarak to you! </span>
-        </div>
-        <!-- Quote Element -->
-        <div class="quote-text">
-            <i class="fas fa-quote-left"></i>
-            <span id="quote">On this Ramadan, I wish you and your family a Happy, Healthy, and Safe Month of Ramadan. May Allah bless you with prosperity and abundance.</span>
-        </div>
+            <div class="user-name" id="user-name"></div>
+            <div class="quote-greeting">wishes you</div>
+        
+            <div class="quote-text">
+                <span> A very Happy Ramadan Mubarak to you! </span>
+            </div>
+            <!-- Quote Element -->
+            <div class="quote-text">
+                <i class="fas fa-quote-left"></i>
+                <span id="quote">On this Ramadan, I wish you and your family a Happy, Healthy, and Safe Month of Ramadan. May Allah bless you with prosperity and abundance.</span>
+            </div>
 
-        <!-- Countdown Timer -->
-        <div class="countdown" id="countdown">
-            Time left until next Eid: Calculating...
+            <!-- Countdown Timer -->
+            <div class="countdown" id="countdown">
+                Time left until next Eid: Calculating...
+            </div>
         </div>
-      </div>
         <h4>Enter your name and share with Family and Friends</h4>
         <input type="text" id="name-input" placeholder="Enter your name" />
 
@@ -179,13 +179,14 @@
         const whatsappButton = document.getElementById('whatsapp-button');
         const countdownElement = document.getElementById('countdown');
 
-        // Function to update greeting with name from URL if available
+        // Function to update greeting with encoded name from URL if available
         function updateGreetingFromURL() {
             const urlParams = new URLSearchParams(window.location.search);
-            const name = urlParams.get('name');
+            const encodedName = urlParams.get('name');
 
-            if (name) {
-                greetingElement.textContent = name.toUpperCase();
+            if (encodedName) {
+                const decodedName = atob(encodedName);  // Decode Base64
+                greetingElement.textContent = decodedName.toUpperCase();
             } else {
                 greetingElement.textContent = '';
             }
@@ -201,11 +202,12 @@
             }
         });
 
-        // Function to generate the custom message
+        // Function to generate the custom message with Base64 encoding
         function generateShareMessage() {
             const name = nameInput.value.trim();
             const baseUrl = window.location.href.split('?')[0];
-            const shareUrl = `${baseUrl}?name=${encodeURIComponent(name)}`;
+            const encodedName = btoa(name); // Encode name in Base64
+            const shareUrl = `${baseUrl}?name=${encodedName}`;
             const shareMessage = `*${name.toUpperCase()}* wishes you Happy Ramadan, click below blue link to view: ${shareUrl}`;
             return shareMessage;
         }
@@ -234,17 +236,14 @@
                 const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
                 const seconds = Math.floor((diff % (1000 * 60)) / 1000);
 
-                countdownElement.textContent = `${days}d ${hours}h ${minutes}m ${seconds}s`;
+                countdownElement.textContent = `Time left until next Eid: ${days}d ${hours}h ${minutes}m ${seconds}s`;
             }
-
-            updateCountdown();
             setInterval(updateCountdown, 1000);
         }
 
-        window.onload = () => {
-            updateGreetingFromURL();
-            startCountdown();
-        };
+        // Initialize Countdown and Greeting
+        updateGreetingFromURL();
+        startCountdown();
     </script>
 </body>
 </html>
