--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
                 const seconds = Math.floor((diff % (1000 * 60)) / 1000);
 
-                countdownElement.textContent = `Time left until next Eid: ${days}d ${hours}h ${minutes}m ${seconds}s`;
+                countdownElement.textContent = ` ${days}d ${hours}h ${minutes}m ${seconds}s`;
             }
             setInterval(updateCountdown, 1000);
         }
