--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redirecting...</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      padding: 100px 20px;
+    }
 
+    .content {
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      display: inline-block;
+      padding: 30px;
+    }
+
+    h1 {
+      color: #333;
+    }
+
+    a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="content">
+    <h1>Redirecting...</h1>
+    <p>If you are not redirected, <a href="https://wishing.pages.dev/eid-ul-fitr.html">click here</a>.</p>
+  </div>
+
+  <script>
+    window.onload = function() {
+      // Redirect the page after 3 seconds
+      setTimeout(function() {
+        window.location.href = "https://wishing.pages.dev/eid-ul-fitr.html";
+      }, 3000); // 3000ms = 3 seconds
+    };
+  </script>
+</body>
+</html>
